2014-01-08 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp:2450 change the type of tmp from uint32_t to
	size_t to accomodate large memory buffers

2014-01-07 John Wu <John dot Wu at ACM dot org>
	* src/tafel.h, src/tafel.cpp: rename reserveSpace to reserveBuffer
	* tests/jrf.cpp: use double to capture the return value of
	fileManager::currentCacheSize, previous version of using 32-bit
	integers which overflows on a machine with more than 4GB of memory

2013-12-28 John Wu <John dot Wu at ACM dot org>
	* src/resource.h, src/resource.cpp: modify function resource::read
	to return an error code instead of printing out warning messages
	because the mechanism for printing message could invoke to
	function ibis::gParameter which causes recursive calls to a static
	constructor in ibis::gParameter
	* src/resource.cpp: in the default constructor and
	ibis::gParameters, avoid attempt to read the default configuration
	files.  Instead, change the documentation to require the user to
	explicitly call ibis::resource::read or ibis::init to incorporate
	use-provided configuration parameters

2013-12-27 John Wu <John dot Wu at ACM dot org>
	* src/resource.h: change the default constructor to invoke
	function read as promised in the class documentation

2013-12-09 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in function loadIndex change
	disableIndexOnFailure to retryIndexOnFailure, i.e., the change the
	default option to not retry index building
	* src/column.cpp: change searchSortedICC and searchSortedICD to
	use ibis::util::find instead of the simple binary search function,
	allow each id to be matches with multiple rows

2013-12-04 John Wu <John dot Wu at ACM dot org>
	* src/whereClause.cpp: in verifyExpr convert the string value of a
	qString expression to a number if the column named is of a numeric
	type
	* src/utilidor.h, src/utilidor.cpp: add a variation of function
	find that take a starting position, use array values to project