@@ -189,6 +189,8 @@ ibis::index* ibis::index::create(const ibis::column* c, const char* dfname,
 	spec = ibis::gParameters()[idxnm.c_str()];
     }
     if (spec) {
+        // skip leading spaces
+        while (spec && isspace(*spec)) ++ spec;
 	// no index is to be used if the index specification start
 	// with "noindex", "null" or "none".
 	if (strncmp(spec, "noindex", 7) == 0 ||
@@ -868,12 +870,15 @@ ibis::index* ibis::index::buildNew
     else if (*spec == 0) {
         dflt = true;
     }
-    else if (strstr(spec, "automatic") != 0 ||
-             strstr(spec, "default") != 0) {
-        dflt = true;
-    }
     else {
-        dflt = (0 != isspace(*spec));
+        while (*spec != 0 && isspace(*spec)) ++ spec;
+        if (strstr(spec, "automatic") != 0 ||
+            strstr(spec, "default") != 0) {
+            dflt = true;
+        }
+        else {
+            dflt = (*spec == 0);
+        }
     }
 
     if (dflt) {
